--- a/css/main.css
+++ b/css/main.css
@@ -4,4 +4,32 @@
 
 body {
     background-color: black;
+    width: 100%;
+}
+
+header {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 0 auto;
+}
+
+.header-logo {
+    width: 106px;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.profil {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+}
+
+.profil-name {
+    color: white;
 }
