--- a/css/main.css
+++ b/css/main.css
@@ -1,58 +1,10 @@
-* {
-    box-sizing: border-box;
+:root {
+    --dark-red: #731616 ;
+    --dark: #140E0E;
 }
+
 
 body {
-    background-color: black;
-    width: 100%;
+    background-color: var(--dark) ;
 }
 
-header {
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin: 0 auto;
-    padding-top: 50px;
-}
-
-
-main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 98px;
-}
-
-.header-logo {
-    width: 106px;
-    margin: 0 auto;
-    align-items: center;
-    justify-content: center;
-}
-
-
-
-.profil-name {
-    font-family: "Inter", serif;
-    color: white;
-    font-size: 14px;
-}
-
-.profile-selection {
-    display: flex;
-}
-
-@media screen and (min-width: ) {
-    body {
-        
-    }
-    
-}
-
-@media  screen and (max-width: 388px) {
-    body {
-        width: 100%;
-        height: 100%;
-    }
-}
